# vulkan_fa

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/executables/: CMakeLists.txt
src/executables/01_boids/: main.cpp
src/executables/02_boids_points/: main.cpp
src/executables/03_ba_in_vulkan/: main.cpp
src/executables/06_simulation/: main.cpp
src/executables/07_vector_fields/: main.cpp
src/libraries/: CMakeLists.txt  Camera.cpp  Camera.h  Grid.h  Model.hpp
src/libraries/Debug/: int_lib.lib
src/shaders/: compile.bat  shader.comp
src/shaders/ba/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shaders_compile.ps1  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/shaders/dummy/: frag.spv  shader.comp  shader.frag  shader.vert  vert.spv
src/shaders/flocking/: comp.spv  compile.bat  frag.spv  shader.comp  shader.frag  shader.vert  vert.spv
src/shaders/new_particle/: atoms.vert  atoms.vert.spv  grid_find_neighbors.comp  grid_find_neighbors.comp.spv  grid_reset.comp.spv  grid_setup.comp  grid_setup.comp.spv  plasma.vert  plasma.vert.spv  shader.comp  shader.comp.spv  skybox.vert  skybox.vert.spv
src/shaders/simulation/: atoms.frag.spv  atoms.vert  atoms.vert.spv  grid_find_neighbors.comp  grid_find_neighbors.comp.spv  grid_reset.comp  grid_setup.comp  grid_setup.comp.spv  plasma.frag  plasma.vert  plasma_movement.comp  plasma_movement.comp.spv  rods.frag  rods.frag.spv  rods.vert  rods.vert.spv  shader.comp  shader.comp.spv  shader.vert.spv  vector_field.comp  vector_field.comp.spv
src/shaders/vector_field/: compile.bat  grid_find_neighbors.comp  grid_find_neighbors.comp.spv  grid_setup.comp  grid_setup.comp.spv  shader.comp  shader.comp.spv  shader.vert  shader.vert.spv  vector_field.comp  vector_field.comp.spv
